[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securerun"
version = "0.1.0"
description = "Secure-run utility for encrypted Python execution"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name="Viren" }
]

dependencies = [
"cryptography",
"colorama"
]

[project.scripts]
sr = "sr.sr:main"